<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">똑똑한 시간표</string>
    <string name="widget_name">똑똑한 시간표 4x4</string>
    <string name="menu_add">과목 추가</string>
    <string name="menu_alarm">버스 정보</string>
    <string name="menu_share">공유</string>
    <string name="menu_toImage">이미지 추출</string>
    <string name="menu_option">환경설정</string>
    <string name="menu_exit">종료</string>
    <string name="cmenu_edit">과목 편집</string>
    <string name="cmenu_add">시간 추가</string>
    <string name="cmenu_delete">과목 삭제</string>
    
    <string name="table_adding">추가중&#8230;</string>
    <string name="table_selectTime">추가하고 싶은 시간을 선택하세요.</string>
    
    <string name="opt_theme">테마</string>
    <string name="opt_theme_desc">시간표 위젯의 테마를 설정합니다.</string>
    <string name="opt_opacity">위젯 투명도</string>
    <string name="opt_opacity_desc">바탕화면 위젯의 투명도를 설정합니다.</string>
    <string name="opt_alarm">수업 시간 알림</string>
    <string name="opt_alarm_desc">수업 시간 알림을 설정합니다.</string>
    <string name="opt_alarmmusic">모닝콜 소리</string>
    <string name="opt_alarmmusic_desc">모닝콜 소리를 설정합니다.</string>
    <string name="opt_alarmtime">수업알림 시간</string>
    <string name="opt_alarmtime_desc">수업알림 시간을 설정합니다.</string>
    <string name="opt_weekend">주말 설정</string>
    <string name="opt_weekend_desc">시간표에 표시될 요일을 선택합니다.</string>
    <string name="opt_base">시간 단위</string>
    <string name="opt_base_desc">시간표의 단위 시간을 설정합니다.</string>
    <string name="opt_start">시작 시작</string>
    <string name="opt_start_desc">시간표의 첫 시간을 설정합니다.</string>
    <string name="opt_end">종료 시간</string>
    <string name="opt_end_desc">시간표의 마지막 시간을 설정합니다.</string>
    <string name="opt_goingtime">등교 시간</string>
    <string name="opt_goingtime_desc">등교에 걸리는 시간을 설정합니다</string>
    <string name="opt_morningcall">모닝콜</string>
    <string name="opt_morningcall_desc">모닝콜 사용 여부</string>
    <string name="opt_aboutus">개발자 정보</string>
    <string name="opt_backup">백업</string>
    <string name="opt_backup_desc">데이터를 백업합니다.</string>
    <string name="opt_init">초기화</string>
    <string name="opt_init_desc">모든 데이터를 초기화합니다.</string>
    <string name="opt_initMsg">모든 데이터가 초기화됩니다.</string>
    <string name="opt_backupComplete">데이터 백업이 완료되었습니다.</string>
    <string name="opt_restoreComplete">데이터 복구가 완료되었습니다.</string>
    <string name="opt_timeErrMsg">시작시간이 종료시간보다 늦을 수 없습니다.</string>
    <string name="opt_current">현재 설정:</string>
    <string name="err_duplicateTime">중복된 시간입니다.</string>
    <string name="err_nullSubjectName">과목명을 입력해주세요.</string>
    <string name="err_nullClassRoom">강의실을 입력해주세요.</string>
    <string name="err_nullDays">요일을 선택해주세요.</string>
    <string name="err_cannotFindLocation">현재 위치를 찾을 수 없습니다.</string>
    
    <string name="loc_businfo">버스 도착 정보</string>
    <string name="loc_unset">출발지 미설정</string>
    <string name="loc_distance">출발지 - 도착지간 거리</string>
    <string name="loc_start">출발지</string>
    <string name="loc_destination">도착지</string>
    <string name="loc_setLocation">위치 설정</string>
    <string name="loc_setStart">출발지 설정</string>
    <string name="loc_setDest">도착지 설정</string>
    <string name="loc_searchStart">출발지 검색</string>
    <string name="loc_searchDest">도착지 검색</string>
    <string name="loc_setBusStop">버스 정류소 설정</string>
    <string name="loc_findBusStop">정류소 설정</string>
    <string name="loc_findBusStop_desc">설정된 출발지와 도착지, 내주변 버스 정류장 검색 및 설정.</string>
    <string name="loc_spBusStop">출발 정류장</string>
    <string name="loc_destBusStop">도착 정류장</string>
    <string name="loc_inputaddr">주소를 입력해주세요.</string>
    <string name="loc_questionSetLocaton">이 주소를 출발지로 설정하시겠습니까?</string>
    <string name="loc_setfrommap_start_desc">지도에 직접 클릭하여 출발지를 설정합니다.</string>
    <string name="loc_setfrommap_dest_desc">지도에 직접 클릭하여 도착지를 설정합니다.</string>
    <string name="loc_setfrommap">출발지를 지도에서 찾아 클릭하세요.</string>
    <string name="loc_setToStartLocation">출발지로 설정하기</string>
    <string name="loc_err_cannotfindaddr">주소를 지도에서 찾을 수 없습니다!</string>
    <string name="loc_err_noaddr">입력한 주소가 존재하지 않습니다.</string>
    <string name="loc_find_sp_stop">출발지 주변 정류소</string>
    <string name="loc_find_dest_stop">도착지 주변 정류소</string>
    <string name="loc_noExact">현재위치와 다소 오차가 발생할 수 있습니다.</string>
    
    <string name="add_generalInfo">일반 정보</string>
    <string name="add_subjectName">과목명</string>
    <string name="add_classRoom">강의실</string>
    <string name="add_professor">교수</string>
    <string name="add_email">e-mail</string>
    <string name="add_subjectName_desc">과목명</string>
    <string name="add_classRoom_desc">강의실 위치</string>
    <string name="add_professor_desc">교수님의 성함</string>
    <string name="add_email_desc">교수님의 e-mail 주소</string>
    <string name="add_setColor">색 설정</string>
    <string name="add_setTime">시간 설정</string>
    <string name="add_addTime">시간 추가</string>
    <string name="add_subjectError">과목 정보를 읽어오는 중 오류가 발생했습니다. 다시 시도해주세요.</string>
    <string name="add_duplicateName">과목 이름이 중복됩니다.</string>
    <string name="add_duplicateTime">시간이 중복됩니다.</string>
    <string name="add_beforeStartTime">종료시각이 시작시각보다 이전입니다.</string>
    
    <string name="alarmview_remain">개 남음!</string>
    <string name="alarmview_snoozeMsg">5분 후에 다시 알람이 울립니다.</string>
    <string name="alarmview_snooze">Snooze</string>
    
    <string name="alarm_notifyClass">수업 알림</string>
    <string name="alarm_beforeMinute">분 전입니다.</string>
    <string name="alarm_afterMinute">분 후에</string>
    <string name="alarm_beforeHour">시간 전입니다.</string>
    <string name="alarm_afterHour">시간 후에</string>
    <string name="alarm_taskAlert">일정이 있습니다.</string>
    <string name="alarm_todayTask">오늘의 일정</string>
    <string name="alarm_todayTaskTitle">오늘의 일정이 있습니다.</string>
    
    <string name="dbdown_title">데이터베이스 다운로드</string>
    <string name="dbdown_alert">버스기반정보를 업데이트합니다. 설치를 원하지 않으면 취소를 클릭하세요.\n(다운로드 용량: 약 3MB)</string>
    
    <string name="dbdown_downloading">데이터베이스 다운로드중&#8230;</string>
    <string name="dbdown_downMsg">GBus 데이터베이스를 다운로드중입니다&#8230;</string>
    <string name="dbdown_installMsg">GBus 데이터베이스를 설치하는 중입니다&#8230;</string>
    <string name="dbdown_checking">데이터베이스 버전 검사중</string>
    <string name="dbdown_checkMsg">데이터베이스의 버전을 검사중입니다&#8230;</string>
    <string name="dbdown_newestDB">데이터베이스가 최신버전입니다.</string>
    
    <string name="call_title">수업중 전화가 있습니다.</string>
    <string name="call_defMessage">수업중입니다. 나중에 다시 연락드리겠습니다.</string>
    
    <string name="dbdown_noDatabase">데이터베이스가 존재하지 않습니다. 데이터베이스를 다운로드해주세요.</string>
    
    <string name="bus_noBus">버스 운행시간이 아닐 수 있습니다.</string>
    <string name="bus_later">분 후 도착</string>
    
    <string name="bus_gotoschool">등교</string>
    <string name="bus_gotohome">하교</string>
    <string name="bus_set_start">출발정류장 설정</string>
    <string name="bus_set_dest">도착정류장 설정</string>
    <string name="bus_start">출발 정류장</string>
    <string name="bus_dest">도착 정류장</string>
    <string name="bus_start1">등교 출발 정류장</string>
    <string name="bus_dest1">등교 도착 정류장</string>
    <string name="bus_start2">하교 출발 정류장</string>
    <string name="bus_dest2">하교 도착 정류장</string>
    
    
    <string name="bus_findingRoute">노선 정보 검색중&#8230;</string>
    <string name="bus_findingRouteMsg">노선 정보를 검색중입니다.\n잠시만 기다려주세요.</string>
    <string name="bus_findingStation">정류장 검색중&#8230;</string>
    <string name="bus_findingStationMsg">정류장 정보를 검색중입니다.\n잠시만 기다려주세요.</string>
    <string name="location_change">현재위치 탐색중&#8230;</string>
    <string name="location_changeMsg">현재위치를 탐색중입니다. \nGPS나 3g 신호가 약할 경우 \n수신이 되지 않을 수 있습니다.</string>
    
    <string name="bus_up">상행</string>
    <string name="bus_down">하행</string>
    <string name="bus_st1">등교\n출발</string>
    <string name="bus_ds1">등교\n도착</string>
    <string name="bus_st2">하교\n출발</string>
    <string name="bus_ds2">하교\n도착</string>
    
    <string name="info_assign">과제</string>
    <string name="info_test">시험</string>
    <string name="info_extra">보강</string>
    <string name="info_etc">기타</string>
    
    <string name="latitude">위도</string>
    <string name="longitude">경도</string>
    
    <string name="fav_start">출발 정류장:</string>
    <string name="fav_dest">도착 정류장:</string>
    
    <string name="teamname">Ajouroid</string>
    <string name="aboutus_since">Since 2011.11.7</string>
    <string name="aboutus_data">아주대학교 정보컴퓨터공학부\n\n조준영, bsoul87@gmail.com\n강병우, koolkb@naver.com\n노건욱, roh_ku@naver.com</string>
    
    
    <string name="leftToRight">▶</string>
    <string name="addStation">정류장 추가</string>
    
    <string name="title">제목</string>
    <string name="type">종류</string>
    <string name="date">일시</string>
    <string name="specify_time">시간 지정</string>
    <string name="day">요일</string>
    <string name="mon">월</string>
    <string name="tue">화</string>
    <string name="wed">수</string>
    <string name="thu">목</string>
    <string name="fri">금</string>
    <string name="sat">토</string>
    <string name="sun">일</string>
    <string name="add_route">노선 추가</string>
    <string name="input_bus_number">버스 번호를 입력하세요.</string>
    <string name="btn_addTime">시간\n추가</string>
    <string name="btn_editSubject">과목\n편집</string>
    <string name="btn_sendEmail">e-mail\n전송</string>
    <string name="btn_deleteSubject">과목\n삭제</string>
    
    <string name="subjectTask_up">▲ Subjects</string>
    <string name="subjectTask_down">▼ Subjects</string>
    
    <string name="busArrival_up">Tasks▲</string>
    <string name="busArrival_down">Tasks▼</string>
    
    <string name="currentRoute">현재 노선</string>
    <string name="favoriteList">노선 목록</string>
    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    <string name="close">닫기</string>
    <string name="description">내용</string>
    <string name="complete">완료</string>
    <string name="save">저장</string>
    <string name="addtask">일정 추가</string>
    <string name="start">시작</string>
    <string name="end">종료</string>
    <string name="search">검색</string>
    <string name="detail">내용</string>
    <string name="warning">경고</string>
    <string name="error">오류</string>
    <string name="unset">미설정</string>
    <string name="refresh">새로고침</string>
    <string name="addNewSubject">새 과목 추가</string>
    <string name="searching">검색중&#8230;</string>
    <string name="version">버전</string>
    <string name="waitforcomplete">완료될 때까지 기다려주십시오&#8230;</string>
    
    <string name="isSet">이 설정되었습니다.</string>
    <string name="isnotSet">이 설정되지 않았습니다.</string>
    <string name="rqSet">을 선택해주십시오.</string>
    <string name="rqConfirm">이대로 설정하려면 확인.</string>
    
    <string name="pressBackBtn">끝내시려면 Back 버튼을 누르세요.</string>
    <string name="exportcomplete">이미지 추출 완료: </string>
    <string name="exportfail">이미지 추출에 실패했습니다.</string>
    
    <string name="deleteMsg">정말 삭제하시겠습니까?</string>

	<string name="seclater">초 후</string>
    <string name="minlater">분 후</string>
    <string name="hourlater">시간 후</string>
    <string name="daylater">일 후</string>
    <string name="today">오늘</string>
    <string name="dateformat">yyyy/MM/dd a hh:mm</string>
    <string name="onlydateformat">yyyy/MM/dd</string>
</resources>