<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/com.ajouroid.timetable" >

    <PreferenceCategory
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:key="theme_screen"
        android:title="테마" >
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/theme_list"
            android:entryValues="@array/theme_value"
            android:key="theme"
            android:summary="@string/opt_theme_desc"
            android:textColor="#000000"
            android:title="@string/opt_theme" />
        <ListPreference
            android:defaultValue="100"
            android:entries="@array/opacity_list"
            android:entryValues="@array/opacity_value"
            android:key="opacity"
            android:summary="@string/opt_opacity_desc"
            android:title="@string/opt_opacity" />
    </PreferenceCategory>
    <PreferenceCategory
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:key="table_screen"
        android:title="시간표" >
        <com.ajouroid.timetable.TimePickerPreference
            custom:defaultValue="09:00"
            custom:is24hour="false"
            android:key="start"
            android:summary="@string/opt_start_desc"
            android:title="@string/opt_start" />
        <com.ajouroid.timetable.TimePickerPreference
            custom:defaultValue="18:00"
            custom:is24hour="false"
            android:key="end"
            android:summary="@string/opt_end_desc"
            android:title="@string/opt_end" />
        <com.ajouroid.timetable.TimePickerPreference
            custom:defaultValue="01:30"
            custom:is24hour="true"
            android:key="base"
            android:summary="@string/opt_base_desc"
            android:title="@string/opt_base" />

        <ListPreference
            android:defaultValue="5"
            android:entries="@array/weekend_list"
            android:entryValues="@array/weekend_value"
            android:key="weekend"
            android:summary="@string/opt_weekend_desc"
            android:title="@string/opt_weekend" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="extra_category"
        android:title="부가기능" >
        <PreferenceScreen
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:background="#FFFFFF"
            android:key="alarm_screen"
            android:summary="모닝콜, 수업시간, 일정 알림을 설정합니다."
            android:title="알람 설정" >
            <intent android:action="android.intent.action.VIEW"
                    android:targetPackage="com.ajouroid.timetable"
                    android:targetClass="com.ajouroid.timetable.AlarmPreference" />
        </PreferenceScreen>
        <PreferenceScreen
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:key="alarm_screen"
            android:summary="수업중 수신거부를 설정합니다."
            android:title="수신거부 설정" >
            <intent android:action="android.intent.action.VIEW"
                    android:targetPackage="com.ajouroid.timetable"
                    android:targetClass="com.ajouroid.timetable.RejectPreference" />
        </PreferenceScreen>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="vibrate_mode"
            android:summary="수업시간이 되면 자동으로 진동모드로 전환합니다."
            android:title="수업중 진동모드 전환" />
    </PreferenceCategory>
    <PreferenceCategory android:title="기타" >
        <PreferenceScreen
            android:key="backup"
            android:summary="@string/opt_backup_desc"
            android:title="@string/opt_backup" >
        </PreferenceScreen>
        <PreferenceScreen
            android:key="restore"
            android:summary="백업해둔 데이터를 복구합니다"
            android:title="데이터 복구" >
        </PreferenceScreen>
        <PreferenceScreen
            android:key="aboutus"
            android:summary=""
            android:title="@string/opt_aboutus" >
        </PreferenceScreen>
        <PreferenceScreen
            android:key="init"
            android:summary="@string/opt_init_desc"
            android:title="@string/opt_init" >
        </PreferenceScreen>
    </PreferenceCategory>

</PreferenceScreen>