    <menu xmlns:android="http://schemas.android.com/apk/res/android">
        <item
            android:id="@+id/menu_add"
            android:title="@string/menu_add"
            android:icon="@drawable/icon_add_subject"
            />
        <item
            android:id="@+id/menu_share"
            android:title="@string/menu_share"
            android:icon="@drawable/icon_menu_share" />
        <item
            android:id="@+id/menu_toImage"
            android:title="@string/menu_toImage"
            android:icon="@drawable/icon_menu_extract"
            />
        <item
            android:id="@+id/menu_option"
            android:title="@string/menu_option"
            android:icon="@drawable/icon_menu_setting"
            />
        <item
            android:id="@+id/menu_exit"
            android:title="@string/menu_exit"
            android:icon="@drawable/icon_menu_power"
            />
    </menu>
