<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="300dp"
    android:layout_gravity="center_vertical|center_horizontal"
    android:background="@drawable/stroke_dialog"
    android:orientation="vertical" >
    
    <TableLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">
        <TableRow>
            <TextView
                android:text="@string/fav_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor = "#000000" />
            <TextView
                android:id="@+id/fav_add_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unset"
                android:textColor = "#000000"
                android:ellipsize="end"
                android:singleLine="true" />
        </TableRow>
        
        <TableRow>
            <TextView
                android:text="@string/fav_dest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor = "#000000" />
            <TextView
                android:id="@+id/fav_add_dest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unset"
                android:textColor = "#000000"
                android:ellipsize="end"
                android:singleLine="true" />
        </TableRow>
    </TableLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >
        <ListView
            android:id="@+id/fav_add_startList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.45" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:text="@string/leftToRight"
            android:layout_weight="0.1" />

        <ListView
            android:id="@+id/fav_add_destList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.45" />

    </LinearLayout>

    <Button
        android:id="@+id/fav_add_addStation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/addStation"
        android:background="@drawable/stroke_button" />
    
    <Button
        android:id="@+id/fav_add_commitBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/complete"
        android:background="@drawable/stroke_button" />
</LinearLayout>