<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:panel="http://schemas.android.com/apk/res/com.ajouroid.timetable"
    android:id="@+id/view1"
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_weight="1" >

    <com.ajouroid.timetable.TimeTable
        android:id="@+id/timetable"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <com.ajouroid.timetable.widget.Panel
        android:id="@+id/topPanel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        panel:animationDuration="800"
        panel:content="@+id/panelContent"
        panel:handle="@+id/panelHandle"
        panel:linearFlying="true"
        android:paddingBottom="4dip"
        panel:position="top" >

        <Button
            android:id="@id/panelHandle"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:background="@drawable/drawer_button"
            android:text="@string/subjectTask_down"
            android:textColor="#000000"
            android:textSize="14sp"
            android:singleLine="true" />

        <LinearLayout
            android:id="@id/panelContent"
            android:layout_width="fill_parent"
            android:layout_height="300dp"
            android:background="#505050"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="#888888"
                    android:gravity="center_vertical"
                    android:text="과목" />

                <ListView
                    android:id="@+id/subjectList"
                    android:layout_width="fill_parent"
                    android:layout_height="200dp"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="5dp"
                    android:cacheColorHint="#00000000" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="길게 누르시면 시간 추가 모드로 들어갑니다."
                    android:textSize="9sp" />

                <Button
                    android:id="@+id/btn_addSubject"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="right"
                    android:layout_margin="10dp"
                    android:background="@drawable/stroke_button"
                    android:text="@string/addNewSubject" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="#888888"
                    android:gravity="center_vertical"
                    android:text="일정" />

                <ListView
                    android:id="@+id/taskList"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="5dip"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:cacheColorHint="#00000000" />
            </LinearLayout>
        </LinearLayout>
    </com.ajouroid.timetable.widget.Panel>

    <com.ajouroid.timetable.widget.Panel
        android:id="@+id/busPanel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        panel:animationDuration="800"
        panel:content="@+id/busContent"
        panel:handle="@+id/busHandle"
        panel:linearFlying="true"
        android:paddingBottom="4dip"
        panel:position="top" >

        <Button
            android:id="@id/busHandle"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@drawable/drawer_button"
            android:text="@string/busArrival_down"
            android:textColor="#000000"
            android:textSize="14sp"
            android:singleLine="true" />

        <LinearLayout
            android:id="@id/busContent"
            android:layout_width="fill_parent"
            android:layout_height="300dp"
            android:background="#505050"
            android:baselineAligned="false"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:text="@string/currentRoute"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Button
                    android:id="@+id/main_bus_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="10dp"
                   android:background="@drawable/stroke_button"
                   android:padding="5dp"
                   android:text="@string/refresh"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/main_bus_favotite_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/stroke_button"
                    android:padding="5dp"
                    android:text="@string/favoriteList" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/main_bus_start"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/unset" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/leftToRight" />

                <TextView
                    android:id="@+id/main_bus_dest"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/unset" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="165dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_gravity="center_vertical" >

                <ListView
                    android:id="@+id/main_bus_list"
                    android:layout_width="fill_parent"
                    android:layout_height="165dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:cacheColorHint="#00000000"
                    android:gravity="center" />

                <ProgressBar
                    android:id="@+id/main_bus_progress"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:visibility="invisible" />
            </FrameLayout>
        </LinearLayout>
    </com.ajouroid.timetable.widget.Panel>

</merge>